Syntax highlighting for day code, probably need to trim the files a bit, but oh well

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="AdventOfCodeBlazor.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/vendor/google-code-prettify/skins/desert.css">
 </head>
 
 <body>
@@ -33,6 +34,8 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/matrixsnow.js"></script>
+    <script type="text/javascript" src="js/vendor/google-code-prettify/prettify.js"></script>
+
 </body>
 
 </html>
