Styling and layout tweaks

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,9 +7,10 @@
     <title>AdventOfCodeBlazor</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/vendor/google-code-prettify/skins/desert.css">
+    <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="AdventOfCodeBlazor.styles.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/vendor/google-code-prettify/skins/desert.css">
 </head>
 
 <body>
@@ -35,6 +36,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/matrixsnow.js"></script>
     <script type="text/javascript" src="js/vendor/google-code-prettify/prettify.js"></script>
+    <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
 
 </body>
 
