Added snow border and tree background

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,14 +17,17 @@
     <div id="app-container">
 
         <canvas id="matrix-snow"></canvas>
+        <div id="trees-border"></div>
+        <div id="trees-border-background"></div>
+        <div id="snow-blur"></div>
+    </div>
+    <!-- preloader -->
+    <div id="app">
 
-        <!-- preloader -->
-        <div id="app">
+        <b>Loading...</b>
 
-            <b>Loading...</b>
-
-        </div>
-        <!-- end preloader -->
+    </div>
+    <!-- end preloader -->
 
     </div>
 
