--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>AdventOfCodeBlazor</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/vendor/google-code-prettify/skins/desert.css">
@@ -23,9 +22,18 @@
     </div>
     <!-- preloader -->
     <div id="app">
-
-        <b>Loading...</b>
-
+        <div class="tree">
+            <svg viewBox="0 0 120 140">
+                <polygon class="p" fill="none" stroke-width="1" points="60,10 10,110 110,110 "/>
+                <circle class="c c1"cx="30" cy="100" r="4" fill="none" stroke-width="1"/>
+                <circle class="c c2" cx="65" cy="40" r="4" fill="none" stroke-width="1"/>
+                <circle class="c c3" cx="90" cy="90" r="4" fill="none" stroke-width="1"/>
+                <circle class="c c4" cx="50" cy="60" r="4" fill="none" stroke-width="1"/>
+                <circle class="c c5" cx="69" cy="102" r="4" fill="none" stroke-width="1"/>
+                <circle class="c c6" cx="45" cy="80" r="4" fill="none" stroke-width="1"/>
+                <circle class="c c7" cx="75" cy="70" r="4" fill="none" stroke-width="1"/>
+            </svg>
+        </div>
     </div>
     <!-- end preloader -->
 
